--- a/index.html
+++ b/index.html
@@ -2,24 +2,56 @@
 <html>
 <head>
   <title>Heather's Favorite Movie</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" style type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700,800" rel="stylesheet">
- 
+  <script type="text/javascript" src="script.js"></script>
 </head>
 
 <body>
-<section> <!-- class="headerImage" -->
-    <img id="headerImage" src="https://lafilmfatale.files.wordpress.com/2011/10/cropped-film_header2.jpg">
-    <h1 id="favMovieHeader">My Favorite Movie</h1>
-</section>
+  <header> 
+     <!-- <div class="container">  --><!-- CONTAINER -->
+     <img src class="logo"/>
+     <h1 id="movieHeader">My Favorite Movie:<br><i>Dirty Dancing</i></h1>
+      <!-- <h1 id="favMovieHeader">My Favorite Movie</h1> -->
+  </header>
 
-<!-- trying to have header words BOLD with background image faded -->
+  <div class="container"> <!-- CONTAINER -->
+  <section>
+    <h2>The Plot</h2>
+    <p>In 1963, Frances "Baby" Houseman, a sweet daddy's girl, goes with her family to a resort in upstate New York's Catskill Mountains. Baby has grown up in privileged surroundings and all expect her to go on to college, join the Peace Corps and save the world before marrying a doctor, just like her father. Unexpectedly, Baby becomes infatuated with the camp's dance instructor, Johnny Castle, a man whose background is vastly different from her own. Baby lies to her father to get money to pay for an illegal abortion for Johnny's dance partner. She then fills in as Johnny's dance partner and it is as he is teaching her the dance routine that they fall in love. It all comes apart when Johnny's friend falls seriously ill after her abortion and Baby gets her father, who saves the girl's life. He then learns what Baby has been up to, who with and worse - that he funded the illegal abortion. He bans his daughter from any further association with "those people"</p>
+    <button id="love" onclick="myFunctionLove()"><b>Click here if you LOVE this movie</b></button>
+    <p id="love"></p>
+    <button id="hate" onclick="myFunctionHate()"><b>Click here if you HATE this movie</b></button>
+    <p id="hate"></p>
+  </section>  
 
+  <aside>
+    <!-- <div> -->
+      <img id="danceMoves1"><a href="http://photobucket.com/images/dirty%20dancing" target="_blank"><img src="http://i289.photobucket.com/albums/ll211/Krismy87/dirty%20dancing/307260811.gif" alt="dirty dancing photo: dirty dancing.gif"/></a> 
+      <img id="danceMoves2"><a href="http://photobucket.com/images/dirty%20dancing" target="_blank"><img src="http://i289.photobucket.com/albums/ll211/Krismy87/dirty%20dancing/dirtydancingentrainement1.gif" alt="dirty dancing photo: dirty dancing.gif"/></a>  
+      <img id="danceMoves3"><a href="http://photobucket.com/images/dirty%20dancing" target="_blank"><img src="http://i289.photobucket.com/albums/ll211/Krismy87/dirty%20dancing/302774347.gif" alt="dirty dancing photo: dirty dancing 302774347.gif"/></a>
+   <!--  </div>  --> 
+  </aside>
+  <div class="clearfix"></div>
+
+  </div><!-- #container -->
+
+  <!-- <section>
     <nav>
      <ul>
       <li><a href="https://www.youtube.com/watch?v=M6ArbEBrYjE">Soundtrack</a></li>
       <li><a href="https://www.amazon.com/s/?ie=UTF8&keywords=dirty+dancing+the+movie&tag=googhydr-20&index=aps&hvadid=153674591913&hvpos=1t1&hvnetw=g&hvrand=16660954336360040897&hvpone=&hvptwo=&hvqmt=b&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9033413&hvtargid=kwd-247882012&ref=pd_sl_2wtfyco9rx_b">Buy</a></li> 
     </ul>
-  </div>
+  </section> -->
+
+  <footer class="footerLinks">
+    <table align="center"> 
+      <tr>
+        <td><a href="https://www.youtube.com/watch?v=M6ArbEBrYjE" target="_blank" style="color: white">Soundtrack</a></td>
+        <td><a href="https://www.amazon.com/s/?ie=UTF8&keywords=dirty+dancing+the+movie&tag=googhydr-20&index=aps&hvadid=153674591913&hvpos=1t1&hvnetw=g&hvrand=16660954336360040897&hvpone=&hvptwo=&hvqmt=b&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9033413&hvtargid=kwd-247882012&ref=pd_sl_2wtfyco9rx_b" target="_blank" style="color:white">Buy Movie</a></td>
+        <td><a href="http://www.imdb.com/title/tt0092890/fullcredits/" target="_blank" style="color:white">Cast List</a></td>
+      </tr>
+    </table>
+  </footer>
 </body>
 </html>
